--- a/klips/src/index.css
+++ b/klips/src/index.css
@@ -19,8 +19,16 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 80vh;
   background-color: #242424;
-  justify-content: center;
   align-items: flex-start;
+  max-width: 1536px;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+}
+
+#root {
+  width: 100%;
+  justify-content: center;
 }
